--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -17,7 +17,7 @@
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Veuillez saisir votre nouveau mot de passe.." />
+                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Veuillez saisir votre nouveau mot de passe." />
                 <label asp-for="Input.NewPassword" class="form-label"></label>
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
