--- a/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
@@ -1,6 +1,7 @@
 ﻿﻿﻿@using Microsoft.AspNetCore.Identity
 @using Newtonsoft.Json
 @using Projet_Web_Commerce.Data
+@model PPMessages
 @inject AuthDbContext _context
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
@@ -91,9 +92,39 @@
     }
 
     textarea {
-        resize: none;
+        resize: vertical;
+        /* height: 120px;
+        width: 100%; */
     }
+
+    .mesBtns {
+        color: rgb(249, 229, 71);
+        background-color: rgb(124, 105, 146);
+    }
+        
+        .mesBtns:hover {
+            color: rgb(124, 105, 146);
+            background-color: rgb(249, 229, 71);
+        }
 </style>
+
+@if (TempData["MsgStatut"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["MsgStatut"]
+    </div>
+}
+
+@{
+    var sujet = "";
+    var message = "";
+
+    if (Model != null)
+    {
+        sujet = Model.Sujet;
+        message = Model.Message;
+    }
+}
 
 <div class="row">
     <div class="col">
@@ -102,9 +133,12 @@
                 @Html.Partial("MenuMessagerie", "EnvoyerMessage")
             </div>
             <div class="card">
-                <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email" onsubmit="return soumettreForm()">
+                <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email"> <!-- onsubmit="return soumettreForm()" -->
                     <div class="card-body">
-                        <h2 class="card-title">Envoyer un message</h2>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h2 class="card-title">Envoyer un message</h2>
+                            <a id="btnEnregistrer" class="btn btn-lg btn-primary mesBtns">Enregister le brouillon</a>
+                        </div>
                         <hr />
                         <div class="form-floating mb-3">
                             <div class="card">
@@ -113,7 +147,7 @@
                                 </div>
                                 <div class="card-body">
                                     
-                                    <select name="ddlClients" id="ddlClients" onchange="addPerson()">
+                                    <select name="ddlClients" id="ddlClients" onchange="ajouterDestinataire()">
                                         <option value=""></option>
                                     @foreach (var utilisateur in listeUtilisateurs)
                                     {
@@ -135,27 +169,28 @@
                                     <div class="selected-names" id="selectedNamesContainer"></div>
                                 </div>
                             </div>
-                            <input type="hidden" name="selectedDestinataire" id="selectedDestinataire" value="">
-                            <input type="hidden" name="auteur" id="auteur" value="">
                         </div>
                         <div class="form-floating mb-3">
-                            <input name="sujet" class="form-control" aria-required="true" required
+                            <input name="sujet" id="sujet" class="form-control" aria-required="true" required
                                    oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
-                                   oninput="setCustomValidity('')" />
+                                   oninput="setCustomValidity('')" value="@sujet" />
                             <label class="form-label">Le sujet</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea name="message" class="form-control" required
-                                   oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
-                                   oninput="setCustomValidity('')"></textarea>
+                            <textarea name="message" id="message" class="form-control" required
+                                oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
+                                oninput="setCustomValidity('')">@message</textarea>
                             <label class="form-label">Votre message</label>
                         </div>
                         <br />
                         <div class="form-floating">
-                            <button id="btnEnvoyer" type="submit" class="w-100 btn btn-lg btn-primary" style="color: rgb(249, 229, 71); background-color: rgb(124, 105, 146)">Envoyer</button>
+                            <a id="btnEnvoyer" class="w-100 btn btn-lg btn-primary mesBtns">Envoyer</a>
                         </div>
+                        <input type="hidden" name="selectedDestinataire" id="selectedDestinataire" value="" />
+                        <input type="hidden" name="auteur" id="auteur" value="" />
+                        <input type="hidden" name="typeMessage" id="typeMessage" value="" />
+                        <input type="hidden" name="idMessage" id="idMessage" value="" />
                     </div>
-                    
                 </form>
             </div>
         </section>
@@ -163,7 +198,7 @@
 </div>
 
 <script>
-    function addPerson() {
+    function ajouterDestinataire() {
         var dropdown = document.getElementById("ddlClients");
         var selectedValue = dropdown.options[dropdown.selectedIndex].value;
 
@@ -194,7 +229,39 @@
         }
     }
 
-    function soumettreForm() {
+    document.getElementById("btnEnregistrer").addEventListener("click", function() {
+        var destinataires = document.getElementById('selectedDestinataire').value;
+        var sujet = document.getElementById('sujet').value;
+        var msg = document.getElementById('message').value
+        if (destinataires == '' && sujet == '' && msg == '') {
+            Swal.fire({
+                title: "Erreur!",
+                text: "Vous devez entrer au moins une donnée pour sauvegarder un brouillon",
+                icon: "error"
+            });
+        }
+        else {
+            var params = new URLSearchParams(document.location.search);
+            var idMessage = params.get('idMessage');
+            var destinatairesSelectionnes = destinataires.split(';');
+            for (var i = 0; i < destinatairesSelectionnes.length; i++) {
+                if (destinatairesSelectionnes[i] == '')
+                    destinatairesSelectionnes.splice(i, 1);
+            }
+
+            document.getElementById('selectedDestinataire').value = destinatairesSelectionnes;
+
+            document.getElementById('auteur').value = '@user.Email';
+            document.getElementById('typeMessage').value = 2;
+            document.getElementById('idMessage').value = idMessage;
+
+            document.getElementById('frmCourriel').submit();
+        }
+    });
+
+    document.getElementById("btnEnvoyer").addEventListener("click", function () {
+        var params = new URLSearchParams(document.location.search);
+        var idMessage = params.get('idMessage');
         var destinatairesSelectionnes = document.getElementById('selectedDestinataire').value.split(';');
         for (var i = 0; i < destinatairesSelectionnes.length; i++) {
             if (destinatairesSelectionnes[i] == '')
@@ -202,10 +269,11 @@
         }
         document.getElementById('selectedDestinataire').value = destinatairesSelectionnes;
         document.getElementById('auteur').value = '@user.Email';
+        document.getElementById('typeMessage').value = 0;
+        document.getElementById('idMessage').value = idMessage;
+
         var valide = true;
         var msgErreur = "";
-
-        // var selectedDestinataires = getCourrielsFromContainer();
 
         if (selectedDestinataire.value == '') {
             msgErreur = "Veuillez sélectionner le(s) destinataire(s) de votre courriel.";
@@ -213,7 +281,7 @@
         }
 
         if (valide) {
-            return true;
+            document.getElementById('frmCourriel').submit();
         }
         else {
             console.log("pas valide");
@@ -222,12 +290,45 @@
                 text: msgErreur,
                 icon: "error"
             }).then(() => {
-                return false;
+                // return false;
             });
         }
+    });
 
-        return false;
-    }
+    // function soumettreForm() {
+    //     var destinatairesSelectionnes = document.getElementById('selectedDestinataire').value.split(';');
+    //     for (var i = 0; i < destinatairesSelectionnes.length; i++) {
+    //         if (destinatairesSelectionnes[i] == '')
+    //             destinatairesSelectionnes.splice(i, 1);
+    //     }
+    //     document.getElementById('selectedDestinataire').value = destinatairesSelectionnes;
+    //     document.getElementById('auteur').value = '@user.Email';
+    //     var valide = true;
+    //     var msgErreur = "";
+
+    //     // var selectedDestinataires = getCourrielsFromContainer();
+
+    //     if (selectedDestinataire.value == '') {
+    //         msgErreur = "Veuillez sélectionner le(s) destinataire(s) de votre courriel.";
+    //         valide = false;
+    //     }
+
+    //     if (valide) {
+    //         return true;
+    //     }
+    //     else {
+    //         console.log("pas valide");
+    //         Swal.fire({
+    //             title: "Erreur!",
+    //             text: msgErreur,
+    //             icon: "error"
+    //         }).then(() => {
+    //             return false;
+    //         });
+    //     }
+
+    //     return false;
+    // }
 
     function getCourrielsFromContainer() {
         var selectedNamesContainer = document.getElementById("selectedNamesContainer");
