verif dispo et en stock panier + correction de bugs catalogue

--- a/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
@@ -216,6 +216,7 @@
                                         <input type="hidden" name="NoProduit" value="@item.NoProduit" />
                                         <input type="hidden" name="NoClient" value="@Model.noClient" />
                                         <input type="hidden" name="NoVendeur" value="@item.NoVendeur" />
+                                        <input type="hidden" name="source" value="tous" />
 
                                         @Html.HiddenFor(m => m.searchString)
                                         @Html.HiddenFor(m => m.parPage)
