--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -13,6 +13,8 @@
     decimal? totalPrice = 0;
     decimal? totalPoids = 0;
     var nbTotal = 0;
+    bool dispo = true;
+    bool enStock = true;
 
     foreach (PPArticlesEnPanier article in ViewBag.Panier)
     {
@@ -83,30 +85,64 @@
                                             Console.WriteLine("FILE Name : " + item.Photo);
                                             Console.WriteLine("FILE : " + File.Exists(path));
 
-                                            <div class="row mb-4 d-flex justify-content-between align-items-center">
+                                            <div class="row mb-3 d-flex justify-content-between align-items-center">
+                                                @{
+                                                    var produit = _context.PPProduits.Where(p => p.NoProduit == articles.NoProduit).FirstOrDefault();
+                                                }
+                                                @if (produit.Disponibilite == false)
+                                                {
+                                                    dispo = false;
+                                                    <div class="col-md-2 col-lg-2 col-xl-1" title="Cet item est non disponible pour le moment.">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="orangered" height="16px" width="16px" version="1.1" id="Capa_1" viewBox="0 0 310.806 310.806" xml:space="preserve">
+                                                            <path d="M305.095,229.104L186.055,42.579c-6.713-10.52-18.172-16.801-30.652-16.801c-12.481,0-23.94,6.281-30.651,16.801  L5.711,229.103c-7.145,11.197-7.619,25.39-1.233,37.042c6.386,11.647,18.604,18.883,31.886,18.883h238.079  c13.282,0,25.5-7.235,31.888-18.886C312.714,254.493,312.24,240.301,305.095,229.104z M155.403,253.631  c-10.947,0-19.82-8.874-19.82-19.82c0-10.947,8.874-19.821,19.82-19.821c10.947,0,19.82,8.874,19.82,19.821  C175.223,244.757,166.349,253.631,155.403,253.631z M182.875,115.9l-9.762,65.727c-1.437,9.675-10.445,16.353-20.119,14.916  c-7.816-1.161-13.676-7.289-14.881-14.692l-10.601-65.597c-2.468-15.273,7.912-29.655,23.185-32.123  c15.273-2.468,29.655,7.912,32.123,23.185C183.284,110.192,183.268,113.161,182.875,115.9z" />
+                                                        </svg>
+                                                    </div>
+                                                }
+                                                else if (produit.NombreItems <= 0)
+                                                {
+                                                    enStock = false;
+                                                    <div class="col-md-2 col-lg-2 col-xl-1" title="Cet item est en rupture de stock.">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="orangered" height="16px" width="16px" version="1.1" id="Capa_1" viewBox="0 0 310.806 310.806" xml:space="preserve">
+                                                        <path d="M305.095,229.104L186.055,42.579c-6.713-10.52-18.172-16.801-30.652-16.801c-12.481,0-23.94,6.281-30.651,16.801  L5.711,229.103c-7.145,11.197-7.619,25.39-1.233,37.042c6.386,11.647,18.604,18.883,31.886,18.883h238.079  c13.282,0,25.5-7.235,31.888-18.886C312.714,254.493,312.24,240.301,305.095,229.104z M155.403,253.631  c-10.947,0-19.82-8.874-19.82-19.82c0-10.947,8.874-19.821,19.82-19.821c10.947,0,19.82,8.874,19.82,19.821  C175.223,244.757,166.349,253.631,155.403,253.631z M182.875,115.9l-9.762,65.727c-1.437,9.675-10.445,16.353-20.119,14.916  c-7.816-1.161-13.676-7.289-14.881-14.692l-10.601-65.597c-2.468-15.273,7.912-29.655,23.185-32.123  c15.273-2.468,29.655,7.912,32.123,23.185C183.284,110.192,183.268,113.161,182.875,115.9z" />
+                                                                    </svg>
+                                                    </div>
+                                                }
+                                                
+
                                                 <div class="col-md-2 col-lg-2 col-xl-2">
+
                                                     <a asp-controller="PPProduits" asp-route-id="@item.NoProduit" asp-action="Details">
                                                                <img class="img-fluid rounded-3"src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
                                                     </a>
                                                 </div>
+
                                                 <div class="col-md-3 col-lg-3 col-xl-3">
                                                     <h6 class="text-muted">@_context.PPCategories.Where(c => c.NoCategorie == item.NoCategorie).FirstOrDefault().Description</h6>
                                                     <h6 class="text-black mb-0">@Html.DisplayFor(modelItem => item.Nom)</h6>
                                                 </div>
+
                                                 <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                                                     <button class="btn btn-link px-2"
                                                             onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                                                         <i class="fas fa-minus"></i>
                                                     </button>
+                                                    @if (produit.NombreItems > 0)
+                                                    {
+                                                        <form asp-route-id="@articles.NoPanier" asp-route-delete="false" asp-route-vendeur="@articles.NoVendeur" asp-action="Index">
+                                                            <input type="number" class="form-control form-control-sm" name="nb" value="@articles.NbItems" onchange="this.form.submit()" min="1" style="border-color: " max="@articles.PPProduits.NombreItems" />
+                                                        </form>
+                                                    }
+                                                    else
+                                                    {
+                                                        <h5 class="text-uppercase" style="color:red; font-size:12px">En rupture de stock !</h5>
 
-                                                    <form asp-route-id="@articles.NoPanier" asp-route-delete="false" asp-route-vendeur="@articles.NoVendeur" asp-action="Index">
-                                                        <input type="number" class="form-control form-control-sm"name="nb" value="@articles.NbItems" onchange="this.form.submit()" min="1" max="@articles.PPProduits.NombreItems" />
-                                                    </form>
+                                                    }
                                                     <button class="btn btn-link px-2"
                                                             onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
                                                         <i class="fas fa-plus"></i>
                                                     </button>
                                                 </div>
+
                                                 <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
                                                     
                                                         @if (item.PrixVente != null && item.DateVente > DateTime.Now)
@@ -123,6 +159,8 @@
                                                             @Html.DisplayFor(modelItem => prix) $
                                                             </h6>
                                                         }
+
+                                                    
                                                 </div>
                                                 <div class="col-md-1 col-lg-1 col-xl-1 text-end">
 
@@ -133,6 +171,8 @@
                                                             </svg>
                                                         </button>
                                                     </form>
+
+                                                   
                                                 </div>
                                             </div>
 
@@ -235,7 +275,7 @@
 
                                         <div class="text-center">
 
-                                            @if (totalPoids < vendeur.PoidsMaxLivraison)
+                                            @if (totalPoids < vendeur.PoidsMaxLivraison && enStock == true)
                                             {
                                                 <form asp-controller="Commande" id="formAjoutPanier" asp-action="ConfirmerCommande" method="post">
 
@@ -246,10 +286,24 @@
                                                         Passer à la commande
                                                     </button>
                                                 </form>
+
+
+                                            }
+                                            else if (enStock == false)
+                                            {
+                                                <h5 class="text-uppercase" style="color:red; font-size:15px">Certains items dans votre panier sont en rupture de stock. Veuillez les supprimer afin de passer à la commande.</h5>
+
                                             }
                                             else
                                             {
                                                 <h5 class="text-uppercase" style="color:red; font-size:15px">Votre commande dépasse le poids maximal pour la livraison. Assurez vous que le poids total de votre commande est sous @vendeur.PoidsMaxLivraison Kg</h5>
+
+                                            }
+
+                                            @if (!dispo)
+                                            {
+                                            <hr class="my-4">
+                                            <h5 class="text-uppercase" style="color:red; font-size:15px"> Certains items dans votre panier sont non disponible pour le moment. Ils seront retiré de votre panier au moment de la commande.</h5>
 
                                             }
 
