--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        @if (!User.IsInRole("Vendeur"))
+                        @if (!User.IsInRole("Vendeur") && !User.IsInRole("Gestionnaire"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link" style="color: rgb(249, 229, 71); font-size: 23px" asp-area="" asp-controller="MainMenu" asp-action="Catalogue">Catalogue</a>
