--- a/Projet Web Commerce/Views/Messagerie/Brouillons.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Brouillons.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-title">Brouillons</h2>
+                    <h2 class="card-title">@ViewData["Title"]</h2>
                     <hr />
                     <table class="table">
                         <thead>
