--- a/Projet Web Commerce/Views/Messagerie/Details.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Details.cshtml
@@ -1,8 +1,14 @@
 ﻿﻿﻿@using Microsoft.AspNetCore.Identity
 @using Projet_Web_Commerce.Data
+@using System.Globalization;
+@inject AuthDbContext _context
 @model PPMessages
 @{
     ViewData["Title"] = "Message";
+    CultureInfo cultureInfo = new CultureInfo("fr-FR");
+
+    string dateFormattee = DateTime.Now.Date.ToString("d MMMM yyyy", cultureInfo);
+    var auteur = _context.Users.FirstOrDefault(u => u.Id == Model.Auteur)?.Email;
 }
 
 <div class="row">
@@ -15,12 +21,16 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2 class="card-title">@Model.Sujet</h2>
-                        <h6>@DateTime.Now.Date</h6>
                     </div>
                     <hr />
-                    <p>
+                    <div class="d-flex justify-content-between align-items-center" style="font-size: 20px;">
+                        <span>De: <b>@auteur</b></span> <!-- @Model.Auteur-->
+                        <span class="ml-auto"><b>@dateFormattee</b></span>
+                    </div>
+                    <br />
+                    <div>
                         @Model.Message
-                    </p>
+                    </div>
                     @if (Model.PieceJointe != null)
                     {
                         @* <embed id="pieceJointe" name="pieceJointe" src="@Model.PieceJointe"/> *@
