--- a/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
@@ -12,14 +12,14 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 350px;
+        width: 700px;
     }
 
     .truncateDest {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 100px;
+        width: 450px;
     }
 
     .msg {
@@ -40,7 +40,7 @@
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-title">Messages envoyés</h2>
+                    <h2 class="card-title">@ViewData["Title"]</h2>
                     <hr />
                     <table class="table">
                         <thead>
@@ -49,7 +49,6 @@
                                 <th scope="col">Destinataire(s)</th>
                                 <th scope="col">Objet - <span class="msg">Message</span></th>
                                 <th scope="col" class="ms-auto">Date de l'envoi</th>
-                                @* <th scope="col" class="ms-auto"></th> *@
                             </tr>
                         </thead>
                         <tbody>
@@ -58,18 +57,23 @@
                             }
                             @foreach (var msg in Model)
                             {
+                                var idDestinataires = msg.Destinataires.Select(d => d.Destinataire);
                                 <tr class="flotter" onclick="window.location.href = '@Url.Action("Details", new { idMessage = msg.NoMessage })'">
                                     <td>@(++no)</td>
                                     <td class="truncateDest">
-                                        @if (msg.Destinataires != null && msg.Destinataires.Any())
-                                        {
-                                            @string.Join(", ", msg.Destinataires.Select(d => d.Destinataire))
+                                        @{
+                                            var destinataires = idDestinataires
+                                            .Select(dest => _context.Users.FirstOrDefault(u => u.Id == dest)?.Email)
+                                            .Where(email => !string.IsNullOrWhiteSpace(email));
+
+                                            var dests = string.Join(", ", destinataires);
                                         }
+                                        @dests
                                     </td>
+
                                     <td class="truncate">@Html.DisplayFor(modelItem => msg.Sujet) - <span class="msg">@Html.DisplayFor(modelItem => msg.Message)</span></td>
                                     <td class="ms-auto">@DateTime.Now.Date</td>
                                     @* <td>@msg.DateMessage.ToShortDateString()</td> *@
-                                    @* <td class="ms-auto"><button class="ms-auto" onclick="showDetails('@msg.NoMessage')">Détails</button></td> *@
                                 </tr>
                             }
                         </tbody>
